Run Spotless to format code